--- a/templates/hospital_dashboard.html
+++ b/templates/hospital_dashboard.html
@@ -70,6 +70,43 @@
             <input type="submit" value="Submit">
         </form>
     </div>
+
+        <div>
+        <h2 style="text-align: center;">Medicinal Data</h2>
+        <table border="1" cellpadding="5" cellspacing="0" style="margin: auto;">
+            <thead>
+                <tr>
+                    <th>Supplier ID</th>
+                    <th>Medicine Name</th>
+                    <th>Uses</th>
+                    <th>Side Effects</th>
+                    <th>Quantity</th>
+                    <th>Request Inventory</th>
+                </tr>
+            </thead>
+            <tbody>
+                {% for record in data %}
+                <tr>    
+                    <td>{{ record[0] }}</td>
+                    <td>{{ record[1] }}</td>
+                    <td>{{ record[2] }}</td>
+                    <td>{{ record[3] }}</td>
+                    <td>{{ record[4] }}</td>
+                    <td>
+                        <form action="/" method="post">
+                            <input type="hidden" name="supplier_id" value="{{manager_id}}">
+                            <input type="hidden" name="ind_id" value="{{record[0]}}">
+                            <input type="hidden" name="med_name" value="{{record[1]}}">
+                            <input type="number" min="100" max="5000" name="quantity">
+                            <button type="submit">Request</button>
+                        </form>
+                    </td>>
+                </tr>
+                {% endfor %}
+            </tbody>
+        </table>
+    </div>
+
     <script>
         function addItem() {
             var container = document.getElementById('items-container');
