--- a/static/style.css
+++ b/static/style.css
@@ -279,4 +279,31 @@
     border-width: 0px;
     width: 12vw;
     height: 36px;
+    font-size: 20px;
+    font-weight: 500;
 }
+
+.industry_dashboard_add_medicine_update_button{
+    background-color: rgb(137, 255, 163);
+    border-radius: 5px;
+    text-align: center;
+    color:black;
+    width: 8vw;
+    height: 36px;
+    font-size: 18px;
+    font-weight: 400;
+    border-width: 0px;
+}
+
+.industry_dashboard_add_medicine_remove_button{
+    background-color: rgb(255, 137, 137);
+    border-radius: 5px;
+    text-align: center;
+    color:black;
+    width: 8vw;
+    height: 36px;
+    font-size: 18px;
+    font-weight: 400;
+    border-width: 0px;
+}
+
