--- a/templates/payer_dashboard.html
+++ b/templates/payer_dashboard.html
@@ -27,7 +27,7 @@
             <input type="number" id="amount" name="amount" min="1" required><br><br>
             <label for="gateway">Payment Method:</label><br>
             <select id="gateway" name="gateway" required>
-                <option value="">Select Payment Method</option>
+                <option value="" disabled>Select Payment Method</option>
                 <option value="Credit Card">Credit Card</option>
                 <option value="Debit Card">Debit Card</option>
                 <option value="PayPal">PayPal</option>
