Update on patient and crowdfunding pages

--- a/templates/crowdfunding_demands.html
+++ b/templates/crowdfunding_demands.html
@@ -7,9 +7,9 @@
     <link rel="stylesheet" href="/static/style.css">
 </head>
 <body>
-    <h2>Crowdfunding Demands</h2>
-    <table border="1" cellpadding="5" cellspacing="0">
-        <thead>
+    <h2 class="view_crowd_funding_main_heading">Crowdfunding Demands</h2>
+    <table border="1.5" cellpadding="15" cellspacing="0" style="margin: auto; ">
+        <thead style="background-color:rgb(220, 254, 223); color:rgb(63, 91, 115) ;">
             <tr>
                 <th>Patient ID</th>
                 <th>Total Demand</th>
