--- a/templates/register.html
+++ b/templates/register.html
@@ -14,23 +14,23 @@
     <div class="register_card_design d-flex flex-column flex-row justify-content-center align-items-center container mt-5">
     <form  action="/registerToDB" method="post">
         <label for="aadhar" class="register_card_form_design"> Aadhar Id </label>
-        <input  type="text" name="aadhar" pattern="\d{12}" maxlength="12" minlength="12" required>
+        <input  style="border-radius: 8px;" type="text" name="aadhar" pattern="\d{12}" maxlength="12" minlength="12" required>
         <br>
         <br>
         <label for="uname" class="register_card_form_design"> User Name </label>
-        <input type="text" name="uname" maxlength="25">
+        <input  style="border-radius: 8px;" type="text" name="uname" maxlength="25">
         <br>
         <br>
         <label for="mobile" class="register_card_form_design"> Mobile Number </label>
-        <input type="text" name="mobile" pattern="\d{10}" maxlength="10" minlength="10" required>
+        <input  style="border-radius: 8px;" type="text" name="mobile" pattern="\d{10}" maxlength="10" minlength="10" required>
         <br>
         <br>
         <label for="passwd" class="register_card_form_design"> passwd </label>
-        <input type="password" name="passwd" maxlength="15" minlength="8" required>
+        <input  style="border-radius: 8px;" type="password" name="passwd" maxlength="15" minlength="8" required>
         <br>
         <br>
         <label for="utype" class="register_card_form_design"> Type of user</label>
-        <select name="utype" required>
+        <select  style="border-radius: 8px;" name="utype" required>
             <option value="" disabled selected> Select the kind of user</option>
             <option value = "supplier">Supplier</option>
             <option value = "Hospital">Hospital</option>
@@ -40,7 +40,7 @@
         </select>
         <br>
         <br>
-        <input class="register_card_button" type="submit" value="Register">
+        <input  class="register_card_button" type="submit" value="Register">
     </form>
     </div>
     </div>
