--- a/templates/supplier_dashboard.html
+++ b/templates/supplier_dashboard.html
@@ -67,10 +67,10 @@
                     <td>{{ record[4] }}</td>
                     <td>
                         <form action="/requestInventory" method="post">
-                            <input type="hidden" name="supplier_id" value="{{manager_id}}">
-                            <input type="hidden" name="ind_id" value="{{record[0]}}">
-                            <input type="hidden" name="med_name" value="{{record[1]}}">
-                            <input type="number" min="100" max="5000" name="quantity">
+                            <input  style="border-radius: 8px; width: 10vw; height: 32px;" type="hidden" name="supplier_id" value="{{manager_id}}">
+                            <input  style="border-radius: 8px; width: 10vw; height: 32px;" type="hidden" name="ind_id" value="{{record[0]}}">
+                            <input  style="border-radius: 8px; width: 10vw; height: 32px;"  type="hidden" name="med_name" value="{{record[1]}}">
+                            <input  style="border-radius: 8px; width: 10vw; height: 32px;"  type="number" min="100" max="5000" name="quantity">
                             <button  class="supplier_dashboard_request_button"  type="submit">Request</button>
                         </form>
                     </td>>
