--- a/templates/register.html
+++ b/templates/register.html
@@ -34,6 +34,7 @@
             <option value="" disabled selected> Select the kind of user</option>
             <option value = "supplier">Supplier</option>
             <option value = "Hospital">Hospital</option>
+            <option value = "NGO">NGO</option>
             <option value = "industry">Industry</option>
             <option value="rep">Representative</option>
             <option value="payer">Payer</option>
