Fixed a small Bug

--- a/templates/admin_dashboard.html
+++ b/templates/admin_dashboard.html
@@ -141,7 +141,7 @@
                 </tr>
             </thead>
             <tbody style="background-color: white;">
-                {% for request in blood_requests %}
+                {% for request in pending_blood_requests %}
                 <tr>
                     <td>{{ request[0] }}</td>
                     <td>{{ request[1] }}</td>
